# RNNLIB

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  readme  rnnlib_kdevelop.kdevelop.filelist
examples/: readme
ide/: readme
samples/: arabic_offline_demo.config
sites/: config.site-all-static  config.site-debug  config.site-debug.mac  config.site-mac  config.site-nocona  config.site-nocona.mac  readme
src/: ActivationFunctions.hpp  AutoregressionLayer.h  AutoregressionLayer.hpp  BiasLayer.hpp  BlockLayer.hpp  ClassificationLayer.hpp  CodeNet.hpp  CollapseLayer.hpp  ConfigFile.hpp  Connection.h  Connection.hpp  CopyConnection.hpp  DataExporter.cpp  DataExporter.h  DataExporter.hpp  DataSequence.h  DataSequence.hpp  DatasetErrors.hpp  DecodingLayer.h  DecodingLayer.hpp  FullConnection.h  FullConnection.hpp  GatherLayer.h  GatherLayer.hpp  GradientCheck.hpp  Helpers.h  Helpers.hpp  InputLayer.hpp  Layer.h  Layer.hpp  LinearOutputLayer.h  LinearOutputLayer.hpp  LogDouble.h  LogDouble.hpp  LstmLayer.hpp  Main.cpp  Makefile.am  Makefile.in  Matrix.h  Matrix.hpp  (+41 more)
src/nnl_boost.xcodeproj/: alexgraves.mode1v3  alexgraves.pbxuser  project.pbxproj
utils/: add_greedy_level.py  build-pentium4.sh  build-static.sh  decode.sh  dict_err_test_boost.sh  disp_seq_boost.sh  dump_sequence_variables.sh  err_test_boost.sh  error_test.sh  grad_check.sh  gradient_check.sh  jacobian.sh  jacobian_boost.sh  make_temp.sh  min_max.py  netcdf_helpers.py  norm_inputs.sh  norm_netcdf_inputs.py  normalise_inputs.py  normalise_inputs.sh  plot_errors.py  plot_errors.sh  plot_online_handwriting.py  plot_variables.py  readme  (+7 more)
(+58 files in other folders)
