bin_PROGRAMS = rnn_lib
rnn_lib_SOURCES = DataExporter.cpp\
Main.cpp\
Random.cpp\
ActivationFunctions.h\
AutoregressionLayer.h\
BiasLayer.h\
BlockLayer.h\
ClassificationLayer.h\
CodeNet.h\
CollapseLayer.h\
ConfigFile.h\
Connection.h\
CopyConnection.h\
DataExporter.h\
DataSequence.h\
DatasetErrors.h\
DecodingLayer.h\
FullConnection.h\
GatherLayer.h\
GradientCheck.h\
Helpers.h\
InputLayer.h\
Layer.h\
LinearOutputLayer.h\
LogDouble.h\
LstmLayer.h\
Matrix.h\
Mdrnn.h\
MemoryNet.h\
MultiArray.h\
MultilayerNet.h\
Named.h\
NetcdfDataset.h\
NeuronLayer.h\
ObjectStore.h\
Optimiser.h\
OutputLayer.h\
PmNet.h\
Random.h\
RegressionLayer.h\
Rprop.h\
SamplingLayer.h\
SeqBuffer.h\
SoftmaxLayer.h\
SteepestDescent.h\
StringAlignment.h\
Trainer.h\
TranscriptionLayer.h\
WeightContainer.h\
Word.h\
list_of.hpp
